sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:13: error: Invalid literal number
for(i<-1to getNombreValeurs() -1)
       ^AlgInsertionSort:24: error: ')' expected but '}' found.
}
^