sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
/*Pour tout i dans [1,lgr-1]
  stocker la valeur de la case i dans une variable v
  recopier la case i-1 dans i, si i-1 contient une valeur plus grande que v
  recopier la case i-2 dans i-1, si i-2 contient une valeur plus grande que v
  recopier la case i-3 dans i-2, si i-3 contient une valeur plus grande que v
  recopier la case i-4 dans i-3, si i-4 contient une valeur plus grande que v
  ...
  recopier v dans la dernière case recopiée plus haut	
*/

for(i<-1to getNombreValeurs() -1)
{
	var v=getValeur(i)
	var j=i
	while(j>0 && getValeur(j-1) > v)
	{
		copie(j-1,j)
		j=j-1
	}
	setValeur(j,v)
}
}
